--- a/FlowSolid 2/nbproject/project.properties
+++ b/FlowSolid 2/nbproject/project.properties
@@ -57,7 +57,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=flowsolid2.FlowSolid2
+main.class=controller.FlowSolid
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
